--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
 
   <!-- Latest Bootstrap compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  
+
+  <!-- Font Awesome -->
+  <script src="https://use.fontawesome.com/43f8ca869b.js"></script>
+
 </body>
 </html>
